# open_os

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  x86_64-nyx.json
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  main.rs  vga_buffer.rs
