[package]
name = "open_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"

# Force the OS to abort immediately on crash to save memory space
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"